axum-macros/tests/debug_handler/fail/wrong_return_tuple.rs

#[axum::debug_handler]
async fn handler() -> (
    axum::http::StatusCode,
    axum::Json<&'static str>,
    axum::response::AppendHeaders<[( axum::http::HeaderName,&'static str); 1]>,
) {
    panic!()
}

fn main(){}